--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -49,7 +49,6 @@
     @{  var property = new Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel();
         property.OrderId = Model.Id;
     }
-
     @Html.Partial("~/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml", property)
 
     <div class="row" id="propertiesControls">
@@ -76,123 +75,10 @@
             <img src="~/Content/Images/btn_add_home.png" />
         </div>
     </div>
-    <div id="propertiesBlock">
-        <ul class="row" id="propertiesList">
-            <li class="row" id="propertiesHeader">
-                <!--
-                <div class="col-md-1">
-                    <p>Location Photos:</p>
-                </div>
-                -->
-                @* Switch next 3 columns to col-md-2 when adding remaining columns *@
-                <div class="col-md-4">
-                    <p>Address:</p>
-                </div>
-                <div class="col-md-4">
-                    <p>Availability Date:</p>
-                </div>
-                <div class="col-md-4">
-                    <p>BD | BA<br />Rent | Sq. Ft:</p>
-                </div>
-                <!--
-                <div class="col-md-3">
-                    <p>Schedule a Viewing</p>
-                </div>
-                <div class="col-md-1">
-                    <p>Like or Dislike:</p>
-                </div>
-                <div class="col-md-1">
-                    <p>Property Comments:</p>
-                </div>
-                -->
-            </li>
 
-            @foreach (var propertyVM in Model.Properties)
-            {
-                <li class="row propertyItem">
-                    <!--
-                    <div class="col-md-1">
-                        <img class="location" src="~/Content/Images/popout_sml_img.png" />
-                    </div>
-                    -->
-
-                    @* Switch next 3 columns to col-md-2 when adding remaining columns *@
-                    <div class="col-md-4">
-                        <p>
-                            @Html.DisplayFor(m => propertyVM.PropertyAddress)
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <p>
-                            @Html.DisplayFor(m => propertyVM.PropertyAvailabilityDate)
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <p>
-                            @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms) | <br />
-                            @Html.DisplayFor(m => propertyVM.PropertyAmount) | @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
-                        </p>
-                    </div>
-                    <!--
-                    <div class="col-md-3">
-                        @Html.DatePicker("date", "ViewingDate", false)
-                    </div>
-                    <div class="col-md-1 like">
-                        <img src="~/Content/Images/icn_ln_selected_like.png" />
-                    </div>
-                    <div class="col-md-1 comments">
-                        <img src="~/Content/Images/icn_chat_bubble.png" />
-                        <span>09</span>
-                    </div>
-                    -->
-                </li>
-            }
- 
-        </ul>
+    <div id="propertiesContainer">
+    @Html.Partial("~/Views/Orders/Partials/_HousingProperties.cshtml", Model.Properties)
     </div>
-    @*@for (int i = 0; i < Model.Properties.Count(); i++)
-    {
-        <div class="row" sel="new" style="display: none;">
-            <div class="col-md-2">
-                <img class="location" src="~/Content/Images/popout_sml_img.png" />
-            </div>
-            <div class="col-md-2">
-                <p>@Html.DisplayFor(model => model.Properties.ElementAt(i).Address)</p>
-            </div>
-            <div class="col-md-2">
-                <p>@Html.DisplayFor(model => model.Properties.ElementAt(i).Availability)</p>
-            </div>
-            <div class="col-md-2">
-                <p>@Html.DisplayFor(model => model.Properties.ElementAt(i).Specifications)</p>
-            </div>
-            <div class="col-md-2">
-                <p>@Html.DisplayFor(model => Html.DatePicker("date", "ViewingDate", model.Properties.ElementAt(i).ViewingDateDisplay))</p>
-            </div>
-            <div class="col-md-1 likebtns">
-                @if (Model.Properties.ElementAt(i).IsLike == false)
-                {
-                    <img class="dislike noinit" src="~/Content/Images/icn_ln_selected_dislike.png" />
-                }
-                else if (Model.Properties.ElementAt(i).IsLike == true)
-                {
-                    <img class="like noinit" src="~/Content/Images/icn_ln_selected_like.png" />
-                }
-                else
-                {
-                    <img class="new" src="~/Content/Images/icn_ln_non_selected_like.png" />
-                }
-            </div>
-            <div class="col-md-2 comments">
-                <img class="comment" src="~/Content/Images/icn_chat_bubble.png" />
-                @if (Model.Properties.ElementAt(i).Comments.Count() > 0)
-                {
-                    <span> Model.Properties.ElementAt(i).Comments.Count().ToString("##00")</span>
-                }
-            </div>
-        </div>
-    }*@
-
-    @*closing the properties div*@
 
     <div id="chat" style="display: none;">
         <div id = "addr" >
