Switching to a decimal for number of bathrooms on property model.

--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-4">
                     <p>
-                        @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms) | <br />
+                        @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms) | @Html.DisplayFor(m => propertyVM.PropertyNumberOfBathrooms)<br />
                         @Html.DisplayFor(m => propertyVM.PropertyAmount) | @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
                     </p>
                 </div>
